<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_page">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/emp_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <!-- TextView for label -->
        <TextView
            android:id="@+id/emp_name_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/welcome"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- TextView for input -->
        <TextView
            android:id="@+id/emp_name_fetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/emp_name"
            android:padding="18dp"
            android:inputType="text"
            android:textSize="24sp"
            android:textStyle="italic"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/emp_name_comma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/comma"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="italic" />

    </LinearLayout>

    <!-- Emp ID -->
    <LinearLayout
        android:id="@+id/emp_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/emp_name_layout"
        android:background="@android:color/white">

        <!-- TextView for label -->
        <TextView
            android:id="@+id/emp_id_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emp_id"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:paddingBottom="8dp" />

        <!-- TextView for input -->
        <TextView
            android:id="@+id/emp_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_bkg"
            android:hint="@string/emp_id"
            android:padding="12dp"
            android:textSize="16sp"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <!-- Emp team -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/emp_id_layout">

        <!-- TextView for label -->
        <TextView
            android:id="@+id/emp_team_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/emp_team"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- TextView for input -->
        <TextView
            android:id="@+id/emp_team_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_bkg"
            android:hint="@string/emp_team"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>


    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.641">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <!-- First Image Button -->

            <!-- Second Image Button -->
            <ImageButton
                android:id="@+id/request_ride"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/requesting_ride"
                android:scaleType="fitCenter"
                android:src="@drawable/request_ride_icon" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/pending_approvals"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/transparent"

                    android:contentDescription="@string/pending_approvals"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pending_request_icon" />

                <ImageView
                    android:id="@+id/notification_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:background="@drawable/ic_notification"
                    android:visibility="visible" />
            </FrameLayout>

            <!-- Third Image Button -->
            <ImageButton
                android:id="@+id/cab_request"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/sending_cab_details_as_per_requested"
                android:scaleType="fitCenter"
                android:src="@drawable/cab_request_icon" />
        </LinearLayout>

    </HorizontalScrollView>

    <include
    android:id="@+id/include1"
    layout="@layout/activity_home_screen"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
