<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Request_ride">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/request_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Request Ride"
        android:paddingBottom="5dp"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="HardcodedText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/request_heading"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Source -->
            <LinearLayout
                android:id="@+id/source_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/request_heading"
                android:background="@android:color/white">

                <!-- TextView for label -->
                <TextView
                    android:id="@+id/source_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Source"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:paddingBottom="8dp" />

                <!-- TextView for input -->
                <EditText
                    android:id="@+id/source_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bkg"
                    android:hint="@string/pick_up"
                    android:textColor="@color/text_color"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <!-- Destination -->
            <LinearLayout
                android:id="@+id/destination_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/source_layout"
                android:background="@android:color/white">

                <!-- TextView for label -->
                <TextView
                    android:id="@+id/to_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:paddingBottom="8dp" />

                <!-- TextView for input -->
                <EditText
                    android:id="@+id/destination_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bkg"
                    android:hint="@string/drop_off"
                    android:textColor="@color/text_color"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>


            <!-- Time Picker -->
            <LinearLayout
                android:id="@+id/time_picker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/distance_layout"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/time_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/time"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <!-- TextView for input -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/time_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_bkg"
                        android:hint="@string/enter_time"
                        android:inputType="time"
                        android:textColor="@color/text_color"
                        android:padding="10dp"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <!-- ImageButton on the Left -->
                    <ImageButton
                        android:id="@+id/time_picker_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/time_picker"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="8dp"
                        android:src="@drawable/baseline_access_time_24"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

            </LinearLayout>


            <!-- Date Picker -->
            <LinearLayout
                android:id="@+id/date_picker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/time_picker_layout"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/date_picker_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/date"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <!-- Icon and text view for date picker -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/edittext_bkg"
                        android:hint="@string/enter_date"
                        android:inputType="date"
                        android:padding="10dp"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <ImageButton
                        android:id="@+id/date_picker_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/date_picker"
                        android:padding="8dp"
                        android:src="@drawable/baseline_calendar_month_24"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/purpose_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/date_picker_layout">

                <TextView
                    android:id="@+id/purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/purpose"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/purpose_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bkg"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/outer_num_of_passenger_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/purpose_layout">

                <TextView
                    android:id="@+id/no_of_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/number_of_passenger"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/inner_num_of_passenger_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <!-- Decrease Button -->
                    <ImageButton
                        android:id="@+id/num_decrease_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/baseline_arrow_left_24"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <!-- Number Display -->
                    <EditText
                        android:id="@+id/num_of_rides_edit_text"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:background="@drawable/edittext_bkg"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />

                    <!-- Increase Button -->
                    <ImageButton
                        android:id="@+id/num_increase_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/baseline_arrow_right_24"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </LinearLayout>

                <TextView
                    android:id="@+id/people_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bkg"
                    android:hint="No.of Passenger"
                    android:textColor="@color/text_color"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:ignore="TouchTargetSizeCheck"/>

                <ToggleButton
                    android:id="@+id/select_toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textOff="@string/select"
                    android:textOn="@string/change"
                    tools:layout_editor_absoluteX="138dp"
                    tools:layout_editor_absoluteY="795dp" />

                <LinearLayout
                    android:id="@+id/main_passenger_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/select_toggleButton">

                    <TextView
                        android:id="@+id/passenger_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passenger_details"
                        android:textStyle="bold"
                        android:visibility="gone"
                        android:textSize="16sp"

                        android:textColor="@color/text_color"/>

                    <TextView
                        android:id="@+id/passenger_name_display"
                        android:layout_width="match_parent"
                        android:textColor="@color/text_color"
                        android:background="@drawable/edittext_bkg"
                        android:padding="10dp"
                        android:visibility="gone"
                        android:textSize="16sp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/passengerdetails_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="8sp">
                    </LinearLayout>

                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Save"
                        android:visibility="gone"
                        android:layout_gravity="center"
                        android:textColor="@color/text_color" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/request_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Request"
                android:layout_gravity="center"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outer_num_of_passenger_layout" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
