<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_Screen">

    <!-- TabLayout for tabs -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/home_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/semi_transparent_white"
        app:tabGravity="fill"
        android:padding="15dp"
        android:layout_gravity="bottom"
        app:tabMode="fixed"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- ViewPager for tab content -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/home_viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/home_tabLayout"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toTopOf="@id/home_imageButtons" />

    <!-- Image Buttons at the bottom of the screen -->
    <LinearLayout
        android:id="@+id/home_imageButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semi_transparent_white"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true">

        <!-- Home Image Button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@color/semi_transparent_white"
            android:gravity="center"
            android:layout_margin="5dp">
            <ImageButton
                android:id="@+id/home_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/semi_transparent_white"
                android:contentDescription="@string/home"
                android:src="@drawable/ic_home_black_24dp"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/home_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home"
                android:textStyle="bold"
                android:textSize="14sp"
                android:gravity="center" />

        </LinearLayout>


        <!-- History Image Button -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/semi_transparent_white"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center"
        android:layout_margin="5dp">

        <ImageButton
            android:id="@+id/history_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/semi_transparent_white"
            android:contentDescription="@string/History"
            android:src="@drawable/baseline_history_24"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/history_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/History"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center" />

    </LinearLayout>

        <!-- Profile Image Button -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/semi_transparent_white"
        android:gravity="center"
        android:layout_margin="5dp">

        <ImageButton
            android:id="@+id/profile_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/semi_transparent_white"
            android:contentDescription="@string/Profile"
            android:src="@drawable/baseline_profile_24"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/profile_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center" />

    </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
